# ChangeLog for app-admin/watchfolder
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/watchfolder/ChangeLog,v 1.10 2007/02/08 20:55:49 flameeyes Exp $

  08 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  19 Mar 2006; Fernando J. Pereda <ferdy@gentoo.org>
  watchfolder-0.3.3.ebuild:
  Add ~alpha wrt bug #123840. Thanks to Thomas Cort <tcort@cs.ubishops.ca>.

  11 Mar 2006; Scott Stoddard <deltacow@gentoo.org>
  +files/0.3.3-64bit.patch, metadata.xml, watchfolder-0.3.3.ebuild:
  Patch added to remove warnings on 64 bit architectures.  Contributed by 
  Tom Cort <linuxgeek@gmail.com> and addressing bug #123840.

*watchfolder-0.3.3 (15 Feb 2006)

  15 Feb 2006; Scott Stoddard <deltacow@gentoo.org>
  +watchfolder-0.3.3.ebuild:
  Version bump, clears bug 61613.

  15 Feb 2006; Scott Stoddard <deltacow@gentoo.org>
  watchfolder-0.3.1.1.ebuild:
  ~amd64 added.  Added link to a project page.

  23 Apr 2005; Stephanie Lockwood-Childs <wormo@gentoo.org>
  watchfolder-0.3.1.1.ebuild:
  marked ~ppc

*watchfolder-0.3.1.1 (04 Jan 2003)

  04 Jan 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Initial import. Ebuild submitted by Peter Turczak <p_turczak@wiwa.de> in #11132.