@@ -15,14 +15,14 @@ EBUILD watchfolder-0.3.3.ebuild 830 RMD160 bc1105d4ea949a5a69ac9d7a2dfe191d6ecc7
 MD5 d94fb9806d9f3f6540afa4021268b38e watchfolder-0.3.3.ebuild 830
 RMD160 bc1105d4ea949a5a69ac9d7a2dfe191d6ecc7f50 watchfolder-0.3.3.ebuild 830
 SHA256 8c991e7a54d0c82a7600c49dba879b7747b0988e67c3bab33800ad91726da908 watchfolder-0.3.3.ebuild 830
-MISC ChangeLog 1294 RMD160 8de2793ca9fb64003636cd3e6229641fd96fc89a SHA1 3d04b792de2bbb35f13cead563b8072e33cc56de SHA256 882e6a52cf1fc95b0dcf1766fe4884dcdcbcbee2a40187a70c7db18dc4d4c055
-MD5 06be7ab305f606cbdd473b1c95fb21aa ChangeLog 1294
-RMD160 8de2793ca9fb64003636cd3e6229641fd96fc89a ChangeLog 1294
-SHA256 882e6a52cf1fc95b0dcf1766fe4884dcdcbcbee2a40187a70c7db18dc4d4c055 ChangeLog 1294
-MISC metadata.xml 252 RMD160 6d4b308eb52de96a692fd740d4711ba9a47f2bc2 SHA1 82f875753e93944a7de9606b49167f878cac2868 SHA256 c4775a2edf3f4f3f22ae064be791e90536a062f1067a0bed4221cf980f575edb
-MD5 442b63f97d60b5f5a8f6b4709d98f453 metadata.xml 252
-RMD160 6d4b308eb52de96a692fd740d4711ba9a47f2bc2 metadata.xml 252
-SHA256 c4775a2edf3f4f3f22ae064be791e90536a062f1067a0bed4221cf980f575edb metadata.xml 252
+MISC ChangeLog 1421 RMD160 a49b30acb3a038bf0d971cdbb948f7073f874fdb SHA1 5c5dbab4ceb119bad2dbbdcbf7c94c99bd93d06b SHA256 e6f4b0bf49466b12622f229ebb2dd523fc841fe7c951d7cec5f6425bcdcbe216
+MD5 e1575636132316ff5f688238cf64dc8f ChangeLog 1421
+RMD160 a49b30acb3a038bf0d971cdbb948f7073f874fdb ChangeLog 1421
+SHA256 e6f4b0bf49466b12622f229ebb2dd523fc841fe7c951d7cec5f6425bcdcbe216 ChangeLog 1421
+MISC metadata.xml 236 RMD160 92f49f8275e75caf57b88a3172d5204eaa4e33ae SHA1 dd1a8550a514e55ab0ed6190ab4794bb090994f8 SHA256 56075995f83836ae824c7cb01931b98d6745f6d5a7764299c8262e801486b829
+MD5 f8262495085fcfa7f25596eadfaa7a35 metadata.xml 236
+RMD160 92f49f8275e75caf57b88a3172d5204eaa4e33ae metadata.xml 236
+SHA256 56075995f83836ae824c7cb01931b98d6745f6d5a7764299c8262e801486b829 metadata.xml 236
 MD5 fc63fc729bedaa4e24bcbf2d2049d184 files/digest-watchfolder-0.3.1.1 259
 RMD160 fc84025e94dd7fa8279447f9983ce398ee67e34c files/digest-watchfolder-0.3.1.1 259
 SHA256 db4b6c780efed1bbcd924eff3c5c751e998782912994b0b159aa96ade9a0af41 files/digest-watchfolder-0.3.1.1 259
@@ -30,9 +30,9 @@ MD5 813a88e0406b8eb243a400412bdeb53f files/digest-watchfolder-0.3.3 250
 RMD160 aaae55ca3c61fa1c42e1bc93cc3f9f665b7bea6e files/digest-watchfolder-0.3.3 250
 SHA256 658eefe7d7a3ad3d887e62100f6e4e902fe3b8b41e6fd0095ae2adb1eab1b09b files/digest-watchfolder-0.3.3 250
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.2 (GNU/Linux)
+Version: GnuPG v2.0.5 (GNU/Linux)
 
-iD8DBQFFy45bAiZjviIA2XgRApdlAKCrW9OfZRg2xhPBNxFes81oT3dZmwCg6cg5
-VcoTySbF/cn3Z08ouDb7dRU=
-=FtQf
+iD8DBQFGmeSQyuNVb5qfaOYRAh/fAKCUPwYqervs9CGwKK4UKzGWk6GBtwCeJn+Q
+W/ZS5HJ8/f3VIVm4wqRNTUQ=
+=QBqZ
 -----END PGP SIGNATURE-----
