@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/watchfolder
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/watchfolder/ChangeLog,v 1.10 2007/02/08 20:55:49 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/watchfolder/ChangeLog,v 1.11 2007/07/15 09:10:31 phreak Exp $
+
+  15 Jul 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Assigning to m-needed, as deltacow is being retired (#118063).
 
   08 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
